--- a/notebooks/completed/02_Geospatial_Data_Processing_executed.ipynb
+++ b/notebooks/completed/02_Geospatial_Data_Processing_executed.ipynb
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📊 Data loaded successfully!\n",
+      "Data loaded successfully!\n",
       "Shape: (25, 11)\n"
      ]
     },
@@ -178,7 +178,7 @@
     "\n",
     "# Load test data\n",
     "df = pd.read_csv('../outputs/test_data_with_gravity.csv')\n",
-    "print(\"📊 Data loaded successfully!\")\n",
+    "print(\"Data loaded successfully!\")\n",
     "print(f\"Shape: {df.shape}\")\n",
     "df.head()"
    ]
@@ -209,7 +209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🎉 Geospatial analysis complete!\n"
+      "Geospatial analysis complete!\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "print(\"🎉 Geospatial analysis complete!\")"
+    "print(\"Geospatial analysis complete!\")"
    ]
   }
  ],
